@@ -6,6 +6,9 @@ kickseed (0.45) UNRELEASED; urgency=low
     ksdevice for now. Once netcfg supports being preseeded with a MAC
     address, this can be supported.
   * Support 'part swap --recommended' (thanks, Rohit Kumar Mehta).
+  * I'm not sure how swap partition preseeding ever worked, because the
+    filesystem slot in the recipe is supposed to be "linux-swap", not
+    "swap". Fixed.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 14 Dec 2006 14:31:41 +0000
 
